--- a/Aula05_16_10_2020/curriculo.html
+++ b/Aula05_16_10_2020/curriculo.html
@@ -39,6 +39,10 @@
             <li>Premio destaque Ouro por 100% de presença e notas acima de 92 - SENAI "Ary Torres" - 1ºsem de 2019</li>
             </ul>
         </div>
+        <div>
+            <h2>Experiência profeissional</h2>
+            <p>A procura do primeiro emprego</p>
+        </div>
     </section>
     <footer>
         <div>
